--- a/views/room.ejs
+++ b/views/room.ejs
@@ -48,7 +48,7 @@
                   <span>Stop Video</span>
                </div>
             </div>
-            <div class="main__controls__block">
+            <!--<div class="main__controls__block">
                <div class="main__controls__button">
                   <i class="fas fa-shield-alt"></i>
                   <span>Security</span>
@@ -61,10 +61,10 @@
                   <i class="fas fa-comment-alt"></i>
                   <span>Chat</span>
                </div>
-            </div>
-            <div onclick="history.back()" class="main__controls__block">
+            </div>-->
+            <div class="main__controls__block">
                <div class="main__controls__button">
-                  <span class="leave_meeting">Leave Meeting</span>
+                  <div onclick="history.back()" class="main__controls__block main__controls__button"<span class="leave_meeting">Leave Meeting</span></div>
                </div>
             </div>
          </div>
