--- a/views/room.ejs
+++ b/views/room.ejs
@@ -64,7 +64,7 @@
             </div>-->
             <div class="main__controls__block">
                <div class="main__controls__button">
-                  <div onclick="history.back()" class="main__controls__block main__controls__button"<span class="leave_meeting">Leave Meeting</span></div>
+                  <div onclick="history.back()" class="main__controls__block main__controls__button"> <span class="leave_meeting">Leave Meeting</span></div>
                </div>
             </div>
          </div>
